call the sysctl destroy functions upon failure and unload, which should fix PR#40029.  while there, fix the radeon unload, which was improperly matching mutex init/destroy operations and leading to trying to destroy lock that was never initialised.